# pokemon-discord-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
bot/: README.md  discord_wxo_bot.py
bot/cogs/: __init__.py  admin_cog.py  packs_cog.py  pcbox_cog.py  pokeagent_cog.py
bot/cogs/admin/: __init__.py  cog.py
bot/cogs/packs/: __init__.py  cog.py  collection_rendering.py  daily_limits.py
bot/cogs/pcbox/: __init__.py  catch_roll.py  cog.py  image_rendering.py  pagination.py  sprites.py
bot/cogs/pokeagent/: __init__.py  cog.py  ownership_cache.py  query_flow.py
bot/common/: __init__.py  config.py  discord_rendering.py  metrics.py  types.py  ui_views.py
bot/features/: __init__.py  embed_standards.py  pack_history.py  pack_opening.py  pokemon_catch_history.py
bot/infrastructure/: __init__.py  thread_store.py  wxo_client.py
db/changelog/: 0001_baseline.sql  0002_command_usage_rate_limits.sql  db.changelog-master.xml
deploy/wxo/: README.md  registry.yaml
docs/screenshots/: README.md  manifest.md
knowledge_bases/: README.md  registry.yaml
knowledge_bases/pokemon-general/: README.md
monitoring/prometheus/: prometheus.yml
scripts/: export_pokemontcg_from_github.py  import_wxo_from_env.sh  import_wxo_resources.sh  split_csv_for_wxo.py
wxo/: README.md  registry.yaml
wxo/knowledge-bases/: pokemon-tcg-kb.yaml
wxo/knowledge_bases/: registry.yaml
wxo/scripts/: import_wxo_from_env.sh  import_wxo_resources.sh
wxo/templates/: knowledge-base.template.yaml
wxo/tools/: requirements.txt
(+13 files in other folders)
